fix navbar font sizes on mobile

--- a/front-end/src/Components/NavBar.css
+++ b/front-end/src/Components/NavBar.css
@@ -60,7 +60,10 @@
 
 @media screen and (max-width: 1024px) {
   .nav {
-    font-size: 20px;
+    font-size: 18px;
+  }
+  #nav-loggedin {
+    font-size: 18px;
   }
   .nav-link {
     padding-top: 5px;
@@ -75,7 +78,7 @@
 
 @media screen and (max-width: 690px) {
   .nav {
-    font-size: 18px;
+    font-size: 16px;
   }
   .nav-link {
     padding-bottom: 15px;
